# brscan

./: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  brscan.spec  common.am  configure  configure.ac  libtool
backend_brscan/: Makefile  Makefile.am  Makefile.in  brother.c  brother.h  brother_advini.c  brother_advini.h  brother_bugchk.c  brother_bugchk.h  brother_cmatch.c  brother_cmatch.h  brother_devaccs.c  brother_devaccs.h  brother_devinfo.c  brother_devinfo.h  brother_log.c  brother_log.h  brother_mfccmd.c  brother_mfccmd.h  brother_mfcinfo.h  brother_misc.c  brother_modelinf.c  brother_modelinf.h  brother_netdev.c  brother_netdev.h  brother_scanner.c  brother_scanner.h  mk_backend  sanei_config.c  sanei_init_debug.c
brsaneconfig/: Makefile.am  Makefile.in  brsaneconfig.c
brscan/: Makefile.in  configure.in
brscan/backend_brscan/: mk_backend
brscan/mk_package/: Brsane.ini  Makefile  makepackage
brscan/netconfig/: Makefile
brscan64/: Makefile  Makefile.in
brscan64/backend_brscan/: Makefile  Makefile.in
brscan64/mk_package/: Makefile  makepackage
data/: setupSaneScan
include/: Makefile.am  Makefile.in
include/sane/: Makefile.am  Makefile.in  sanei_backend.h
libbrcolm/: Makefile.am  Makefile.in
libbrcolm/GrayCmData/: Makefile.am  Makefile.in
libbrscandec/: Makefile.am  Makefile.in  brother_scandec.h
libsane-brother/: Makefile.am  Makefile.in  brother.c  brother.h  brother_advini.h  brother_bugchk.c  brother_cmatch.h  brother_devaccs.c  brother_devaccs.h  brother_log.h  brother_mfccmd.c  brother_mfccmd.h  brother_misc.h  brother_netdev.c  brother_netdev.h  brother_scanner.c  sanei_constrain_value.c
mk_package/: Makefile  brscan.list  makepackage
netconfig/: Makefile  Makefile.in  mk_brsaneconfig
sanei/: Makefile  sanei_config.c  sanei_scsi.c
