#
# Brother sane backend Driver
#
# Copyright (C) 2017 Norbert Eicker <norbert.eicker@gmx.de>
#
# This file may be distributed under the terms of the GNU GENERAL PUBLIC LICENSE
# as defined in the file Copying included in the packaging of this file.
#

include $(top_srcdir)/common.am

noinst_HEADERS = config.h config.h.in sane.h sanei.h sanei_backend.h	\
	sanei_config.h sanei_debug.h saneopts.h
