#
# Brother sane backend Driver
#
# Copyright (C) 2017 Norbert Eicker <norbert.eicker@gmx.de>
#
# This file may be distributed under the terms of the GNU GENERAL PUBLIC LICENSE
# as defined in the file Copying included in the packaging of this file.
#

include $(top_srcdir)/common.am

graycmdatadir = $(datadir)/sane/brother/GrayCmData

nobase_dist_graycmdata_DATA = BHL/brmfgray.bin BHL2/brmsi06.bin		\
	BHL2FB/brmsi06f.bin BHLFB/brmfgray.bin BHMFB/brmfgray.bin	\
	BHminiFB/brmfgray.bin YL4/brmfgray.bin YL4FB/brlutcm.dat	\
	YL4FB/brmfgray.bin ZL2/brmsl07.bin ZL2FB/brmsl07f.bin		\
	ZL2FB/brmsl07f.cm ZLe/brmfgray.bin ZLeFB/brlutcm.dat		\
	ZLeFB/brmfgray.bin
